Bind framebuffer to fbo_ object before readPixels, rather than multisample_fbo_

readPixels cannot get content from multisample_fbo_ directly, only from fbo_ whose
content is resolved from multisample_fbo_.

BUG=725579
TESTCASE=DrawingBufferSoftwareRenderingTest.framebufferBinding

Review-Url: https://codereview.chromium.org/2905633002
Cr-Commit-Position: refs/heads/master@{#476807}

Former-commit-id: f4f805f9fb47f434766195909c50a46b484ffdbb